# Borderlands2SaveEditor

./: .coveralls.yml  .gitignore  .travis.yml  Cargo.toml  Readme.md  build.rs
.config/: nextest.toml
.github/workflows/: ci.yml
borderlands2/: Cargo.toml  build.rs
borderlands2/fuzz/: Cargo.toml
borderlands2/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
borderlands2/src/: hufman.rs  lib.rs
borderlands2/src/protos/: mod.rs
borderlands2_gui/: Cargo.toml
borderlands2_gui/src/: main.rs
src/: main.rs
src/protos/: mod.rs
