[package]
name = "borderlands2_save_editor"
version = "0.1.0"
authors = ["David Oberacker <david.oberacker@microchip.com>"]
edition = "2018"

[dependencies.borderlands2]
path = "borderlands2"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"
features = ["with-bytes"]

[workspace]
members = ["borderlands2"]

